--- a/projects/lib/src/admin/components/page-editor/page-editor.component.html
+++ b/projects/lib/src/admin/components/page-editor/page-editor.component.html
@@ -168,4 +168,5 @@
       placeholder="Copy and paste any scripts you want to execute at the bottom of the <body> element"
     ></textarea>
   </div>
+  <button class="btn btn-primary" (click)="onSubmit()">Save Page</button>
 </div>
