good stopping point (for now) for page-list

--- a/projects/lib/src/admin/components/html-editor/html-editor.component.html
+++ b/projects/lib/src/admin/components/html-editor/html-editor.component.html
@@ -2,4 +2,6 @@
   [initialValue]="initialValue"
   [init]="resolvedEditorOptions"
   [id]="tinymceId"
+  [(ngModel)]="initialValue"
+  (ngModelChange)="onChange($event)"
 ></editor>
