--- a/projects/lib/src/admin/components/page-editor/page-editor.component.html
+++ b/projects/lib/src/admin/components/page-editor/page-editor.component.html
@@ -2,6 +2,7 @@
   <cms-html-editor
     [initialValue]="page.Content"
     [editorOptions]="editorOptions"
+    (onHtmlEditorChange)="onHtmlEditorChange()"
   ></cms-html-editor>
 </div>
 <div *ngIf="!htmlEditorOnly">
@@ -52,12 +53,6 @@
           <label class="custom-control-label" for="pageActive2">Disabled</label>
         </div>
       </div>
-      <!-- <div class="checkbox">
-        <label for="pageActive">
-          <input id="pageActive" type="checkbox" [(ngModel)]="page.active" />
-          Active
-        </label>
-      </div> -->
     </div>
   </div>
   <div class="form-group">
@@ -82,6 +77,7 @@
       class="form-control"
       placeholder="Choose a short, one to three word title for navigation elements"
       [(ngModel)]="page.NavigationTitle"
+      (ngModelChange)="onPageNavigationTitleChange($event)"
     />
   </div>
   <div class="form-group">
@@ -110,6 +106,7 @@
         type="text"
         class="form-control"
         [(ngModel)]="page.Url"
+        (ngModelChange)="onPageUrlChange($event)"
         [readOnly]="automaticUrl"
         required
         aria-describedby="pageUrlHelp"
@@ -155,6 +152,7 @@
     <cms-html-editor
       [initialValue]="page.Content"
       [editorOptions]="editorOptions"
+      (onHtmlEditorChange)="onHtmlEditorChange($event)"
     ></cms-html-editor>
   </div>
   <div class="form-group">
@@ -168,5 +166,4 @@
       placeholder="Copy and paste any scripts you want to execute at the bottom of the <body> element"
     ></textarea>
   </div>
-  <button class="btn btn-primary" (click)="onSubmit()">Save Page</button>
 </div>
