--- a/projects/lib/src/admin/components/asset-update/asset-update.component.html
+++ b/projects/lib/src/admin/components/asset-update/asset-update.component.html
@@ -1,91 +1,119 @@
 <div class="tab-container">
-    <form *ngIf="assetForm"
-          [formGroup]="assetForm">
-        <div class="row">
-          <div class="form-group col-sm-4">
-            <img *ngIf="assetForm?.controls['Url']?.value && assetType == 'Image'"
-                  class="card-img-top img-fluid flex-shrink-0"
-                  [src]="assetForm.controls['Url'].value">
-            <div *ngIf="isNew">
-              <small>{{assetForm?.controls['FileName']?.value}}</small>
-              <button *ngIf="assetForm?.controls['Url']?.value"
-                      type="button"
-                      class="btn btn-sm btn-danger"
-                      (click)="deleteFile()">Remove {{assetType}}</button>
-              <div *ngIf="!assetForm?.controls['Url']?.value"
-                   class="dropzone" 
-                   cmsDragAndDrop
-                   (fileDropped)="uploadFile($event)">
-                <input type="file"
-                       #fileDropRef
-                       id="fileDropRef"
-                       (change)="uploadFile($event.target.files[0])"/>
-                <p>Drage and drop {{assetType}} here</p>
-                <p>or</p>
-                <label for="fileDropRef">Browse for file</label>
-              </div>
-            </div>           
-            <input [hidden]="true"
-                    class="form-control"
-                    id="{{asset ? asset.ID : 'new'}}"
-                    type="file"
-                    accept="image/*,.pdf"
-                    (change)="uploadFile($event.target.files[0])"
-                    placeholder="Upload file" />
-            <button *ngIf="!isNew"
-                    type="button"
-                    class="btn btn-default">
-              <label class="mb-0"
-                      for="{{asset ? asset.ID : 'new'}}">
-                <small>
-                  {{assetForm.controls['Url'] && assetForm.controls['Url'].value ? 'Replace' : 'Add'}}
-                  <span class="d-none d-sm-block">{{assetType}}</span>
-                </small>
-              </label>
-            </button>
-          </div>
-          <div class="form-group col-sm-8">
-            <label for="Title">Title</label>
-            <input type="text"
-                    formControlName="Title"
-                    class="form-control"
-                    id="Title"
-                    placeholder="Title"
-                    autofocus="true"
-                    pattern="([A-Za-z0-9\-\_]+)"
-                    autocomplete="off" />
-            <label for="ID">ID</label>
-            <input type="text"
-                    formControlName="ID"
-                    class="form-control"
-                    id="ID"
-                    placeholder="ID"
-                    autofocus="true"
-                    pattern="([A-Za-z0-9\-\_]+)"
-                    autocomplete="off" />
-            <label for="Url">Url</label>
-            <input type="text"
-                    formControlName="Url"
-                    class="form-control"
-                    id="Url"
-                    placeholder="Url"
-                    autofocus="true"
-                    autocomplete="off" />
-            <div class="checkbox">
-              <label for="{{asset ? 'Active_' + asset.ID : 'newActive'}}">
-                <input formControlName="Active"
-                        type="checkbox"
-                        id="{{asset ? 'Active_' + asset.ID : 'newActive'}}">
-                Active
-              </label>
-            </div>
-            <button class="btn btn-sm btn-primary"
-                    [disabled]="!formValid()"
-                    (click)="saveChanges(assetForm)">{{ isNew ? 'Create ' + assetType : 'Save Changes'}}</button>
-            <button *ngIf="!isNew"
-                    class="btn btn-sm btn-danger"
-                    (click)="deleteAsset(asset.ID)">Delete {{assetType}}</button>
+  <form *ngIf="assetForm" [formGroup]="assetForm">
+    <div class="row">
+      <div class="form-group col-12 co-sm-4 col-md-3 col-xl-2">
+        <img
+          *ngIf="(assetForm?.controls)['Url']?.value && assetType == 'Image'"
+          class="card-img-top img-fluid flex-shrink-0"
+          [src]="assetForm.controls['Url'].value"
+        />
+        <div *ngIf="isNew">
+          <small>{{ (assetForm?.controls)["FileName"]?.value }}</small>
+          <button
+            *ngIf="(assetForm?.controls)['Url']?.value"
+            type="button"
+            class="btn btn-sm btn-danger"
+            (click)="deleteFile()"
+          >
+            Remove {{ assetType }}
+          </button>
+          <div
+            *ngIf="!(assetForm?.controls)['Url']?.value"
+            class="dropzone"
+            cmsDragAndDrop
+            (fileDropped)="uploadFile($event)"
+          >
+            <input
+              type="file"
+              #fileDropRef
+              id="fileDropRef"
+              (change)="uploadFile($event.target.files[0])"
+            />
+            <p>Drage and drop {{ assetType }} here</p>
+            <p>or</p>
+            <label for="fileDropRef">Browse for file</label>
           </div>
         </div>
-    </form>
-  </div>
+        <input
+          [hidden]="true"
+          class="form-control"
+          id="{{ asset ? asset.ID : 'new' }}"
+          type="file"
+          accept="image/*,.pdf"
+          (change)="uploadFile($event.target.files[0])"
+          placeholder="Upload file"
+        />
+        <button *ngIf="!isNew" type="button" class="btn btn-default">
+          <label class="mb-0" for="{{ asset ? asset.ID : 'new' }}">
+            <small>
+              {{
+                assetForm.controls["Url"] && assetForm.controls["Url"].value
+                  ? "Replace"
+                  : "Add"
+              }}
+              <span class="d-none d-sm-block">{{ assetType }}</span>
+            </small>
+          </label>
+        </button>
+      </div>
+      <div class="form-group col">
+        <label for="Title">Title</label>
+        <input
+          type="text"
+          formControlName="Title"
+          class="form-control"
+          id="Title"
+          placeholder="Title"
+          autofocus="true"
+          pattern="([A-Za-z0-9\-\_]+)"
+          autocomplete="off"
+        />
+        <label for="ID">ID</label>
+        <input
+          type="text"
+          formControlName="ID"
+          class="form-control"
+          id="ID"
+          placeholder="ID"
+          autofocus="true"
+          pattern="([A-Za-z0-9\-\_]+)"
+          autocomplete="off"
+        />
+        <label for="Url">Url</label>
+        <input
+          type="text"
+          formControlName="Url"
+          class="form-control"
+          id="Url"
+          placeholder="Url"
+          autofocus="true"
+          autocomplete="off"
+        />
+        <div class="checkbox">
+          <label for="{{ asset ? 'Active_' + asset.ID : 'newActive' }}">
+            <input
+              formControlName="Active"
+              type="checkbox"
+              id="{{ asset ? 'Active_' + asset.ID : 'newActive' }}"
+            />
+            Active
+          </label>
+        </div>
+        <button
+          class="btn btn-sm btn-primary"
+          [disabled]="!formValid()"
+          (click)="saveChanges(assetForm)"
+        >
+          {{ isNew ? "Create " + assetType : "Save Changes" }}
+        </button>
+        <button
+          *ngIf="!isNew"
+          class="btn btn-sm btn-danger"
+          (click)="deleteAsset(asset.ID)"
+        >
+          Delete {{ assetType }}
+        </button>
+      </div>
+    </div>
+  </form>
+</div>
