--- a/projects/lib/src/admin/components/asset-update/asset-update.component.scss
+++ b/projects/lib/src/admin/components/asset-update/asset-update.component.scss
@@ -1,29 +1,33 @@
+:host {
+  width: 100%;
+}
+
 .dropzone {
-    padding: 2rem;
-    text-align: center;
-    border: dashed 1px #979797;
-    position: relative;
-    margin: 0 auto;
+  padding: 2rem;
+  text-align: center;
+  border: dashed 1px #979797;
+  position: relative;
+  margin: 0 auto;
 
-    input {
-        opacity: 0;
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        top: 0;
-        left: 0;
-    }
+  input {
+    opacity: 0;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+  }
 
-    label {
-        color: white;
-        width: 183px;
-        height: 44px;
-        border-radius: 21.5px;
-        background-color: #979797;
-        padding: 8px 16px;
-    }
+  label {
+    color: white;
+    width: 183px;
+    height: 44px;
+    border-radius: 21.5px;
+    background-color: #979797;
+    padding: 8px 16px;
+  }
 }
 
 .fileover {
-    background-color: rgb(187, 255, 148);
-  }
+  background-color: rgb(187, 255, 148);
+}
