WIN-1576, WIN-1582, WIN-1583
- Update headstart sdk version number to ^1.6.3
- Refactor Document to JDocument
- Split out page editor into tabs
- Migrate save/delete api calls into page editor
- Use event callbacks to manage page list state as page editor saves / deletes
- Clean up styles

--- a/projects/lib/src/admin/components/asset-list/asset-list.component.html
+++ b/projects/lib/src/admin/components/asset-list/asset-list.component.html
@@ -12,7 +12,7 @@
       <div class="row mb-3">
         <div class="col-12 co-sm-4 col-md-3 col-xl-2">
           <button
-            class="btn btn-block btn-primary"
+            class="btn btn-block btn-outline-primary"
             (click)="handleUploadAssetModal(uploadAssetModal)"
           >
             Upload {{ type }}
