--- a/projects/lib/src/admin/components/page-editor/page-editor.component.scss
+++ b/projects/lib/src/admin/components/page-editor/page-editor.component.scss
@@ -1,5 +1,9 @@
+:host {
+  width: 100%;
+}
+
 .text-muted {
-    color: black;
-    opacity: .5;
-    font-size: 15px;
+  color: black;
+  opacity: .5;
+  font-size: 15px;
 }
