--- a/projects/lib/src/admin/components/page-list/page-list.component.scss
+++ b/projects/lib/src/admin/components/page-list/page-list.component.scss
@@ -1,79 +1,4 @@
-.page-header {
-    margin: 1rem 0;
-}
-
-.col {
-    margin-left: 2rem;
-}
-
-$gray: #d9d9da;
-
-.new-page-row {
-    background-color: $gray;
-}
-
-.filters-row {
-    margin-bottom: 1rem;
-}
-
-.filter-group {
-    display: flex;
-    max-width: 450px;
-    
-    * {
-        margin-right: 1rem;
-    }
-}
-
-.page-list-table {
-    tr {
-        th:first-child, td:first-child {
-            padding-left: 2rem;
-        }
-        th {
-            color: #8B8B8B;
-            text-transform: uppercase;
-            font-weight: bold;
-            font-size: 12px;
-        }
-
-        td {
-            font-size: 12px;
-        }
-    }
-}
-
-.page-list-col {
-    border-right: 1px solid $gray;
-    padding-right: 0;
-}
-
-.page-detail-col {
-    background-color: #f7f9fa;
-    padding: 0 3rem;
-}
-
-.page-title-container {
-    display: flex;
-    .page-title {
-        margin-bottom: 0;
-    }
-    span {
-        :hover {
-            cursor: pointer;
-        }
-    }
-}
-
-.page-list-toolbar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.page-list-buttons {
-    button {
-        margin: 20px 10px;
-        width: 150px;
-    }
+:host {
+  width: 100%;
+  display: block;
 }
