--- a/projects/lib/src/shared/components/no-results/no-results.component.scss
+++ b/projects/lib/src/shared/components/no-results/no-results.component.scss
@@ -1,10 +1,14 @@
+:host {
+  width: 100%
+}
+
 .no-results {
-    background-color: #ececec;
-    width: 100%;
-    border-radius: 15px;
-    margin: 10px;
-    margin-top: 5%;
-    &_msg {
-        padding: 5px 0 5px 0;
-    }
+  background-color: #ececec;
+  width: 100%;
+  border-radius: 15px;
+  margin-top: 5%;
+
+  &_msg {
+    padding: 5px 0 5px 0;
+  }
 }
