--- a/projects/lib/src/admin/components/page-list/page-list.component.scss
+++ b/projects/lib/src/admin/components/page-list/page-list.component.scss
@@ -1,4 +1,41 @@
 :host {
   width: 100%;
+  height: 100%;
+  overflow: hidden;
   display: block;
+}
+
+.detail-view {
+  height: calc(100% - 70px)
+}
+
+.main-content {
+  height: calc(100% - 70px)
+}
+
+.table-responsive {
+  height: calc(100% - 70px);
+  border-top: 1px solid #dee2e6;
+}
+
+.table-responsive>.table>thead>tr>th {
+  position: sticky;
+  top: 0;
+  border-top: 0;
+  border-bottom: 0;
+  background: white;
+
+  &:after {
+    content: ' ';
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    height: 1px;
+    background-color: #dee2e6;
+  }
+}
+
+.table-responsive>.table>tbody>tr:first-of-type>td {
+  border-top: 0;
 }
