Add stories for New Page & Edit Page on page-editor.stories.ts
- also, remove the "Pages" header from cms-page-list, as I imagine we'll want different headers depending on use case.
- we may want to provide options for "singular" and "plural" terminology of a "page" on cms-page-list so that we can modify the language to fit blog posts vs. static page management.

--- a/projects/lib/src/admin/components/page-list/page-list.component.scss
+++ b/projects/lib/src/admin/components/page-list/page-list.component.scss
@@ -5,12 +5,8 @@
   display: block;
 }
 
-.detail-view {
-  height: calc(100% - 70px)
-}
-
 .main-content {
-  height: calc(100% - 70px)
+  height: 100%;
 }
 
 .table-responsive {
