comment out search/filter - we might add later

--- a/projects/lib/src/admin/components/page-list/page-list.component.html
+++ b/projects/lib/src/admin/components/page-list/page-list.component.html
@@ -10,7 +10,8 @@
         New Page
       </button>
     </div>
-    <div class="flex-grow-0 flex-shrink-1 pr-2">
+    <!-- TODO: enable search/filter once it works better -->
+    <!-- <div class="flex-grow-0 flex-shrink-1 pr-2">
       <input
         type="search"
         class="form-control"
@@ -29,7 +30,7 @@
         <path d="M0 0h24v24H0z" fill="none" />
         <path d="M10 18h4v-2h-4v2zM3 6v2h18V6H3zm3 7h12v-2H6v2z" />
       </svg>
-    </div>
+    </div> -->
   </div>
   <div
     class="table-responsive"
@@ -84,7 +85,8 @@
           New Page
         </button>
       </div>
-      <div class="flex-grow-0 flex-shrink-1 pr-2">
+      <!-- TODO: enable search/filter once it works better -->
+      <!-- <div class="flex-grow-0 flex-shrink-1 pr-2">
         <input
           type="search"
           class="form-control"
@@ -103,7 +105,7 @@
           <path d="M0 0h24v24H0z" fill="none" />
           <path d="M10 18h4v-2h-4v2zM3 6v2h18V6H3zm3 7h12v-2H6v2z" />
         </svg>
-      </div>
+      </div> -->
     </div>
     <div class="table-responsive">
       <table class="table table-hover">
