--- a/projects/lib/src/admin/components/page-list/page-list.component.html
+++ b/projects/lib/src/admin/components/page-list/page-list.component.html
@@ -34,7 +34,7 @@
   </div>
   <div
     class="table-responsive"
-    *ngIf="!loading && list?.Items?.length && !page?.length"
+    *ngIf="!loading && list?.length && !page?.length"
   >
     <table class="table table-hover page-list-table">
       <thead>
@@ -47,7 +47,7 @@
       </thead>
       <tbody>
         <tr
-          *ngFor="let contentDoc of list.Items"
+          *ngFor="let contentDoc of list"
           (click)="selectPage(contentDoc)"
         >
           <td>
@@ -67,7 +67,7 @@
       </tbody>
     </table>
   </div>
-  <div *ngIf="!loading && !list?.Items?.length">
+  <div *ngIf="!loading && !list?.length">
     <cms-no-results message="No pages found"></cms-no-results>
   </div>
 </div>
@@ -115,7 +115,7 @@
           </tr>
         </thead>
         <tbody>
-          <tr *ngFor="let page of list.Items" (click)="selectPage(page)">
+          <tr *ngFor="let page of list" (click)="selectPage(page)">
             <td>
               <cms-status-icon
                 [status]="page.Doc.Active ? 'active' : 'disabled'"
@@ -139,6 +139,9 @@
       (pageDeleted)="onPageDeleted($event)"
       [renderSiteUrl]="renderSiteUrl"
       [editorOptions]="editorOptions"
+      [resourceType]="resourceType"
+      [resourceID]="resourceID"
+      [parentResourceID]="parentResourceID"
       [document]="selected"
     >
     </cms-page-editor>
